# ssv-market-quality-monitoring

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: config.yaml
grafana/dashboards/: ssv_correlation.json  ssv_market_quality.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: timescaledb.yml
migrations/: 001_init.sql  002_benchmarks.sql  003_fx_rate.sql  004_asset_prices.sql  005_daily_correlations.sql
specs/: PRD_SSV_market_quality_monitoring.md
src/ssv_mqm/: __init__.py  aggregate.py  aggregator.py  benchmark.py  collector.py  config.py  correlation.py  db.py  log.py  main.py  metrics.py  models.py  prices.py  sampler.py
tests/: test_aggregator.py  test_benchmark.py  test_config.py  test_correlation.py  test_metrics.py  test_prices.py
