[project]
name = "ssv-mqm"
version = "0.1.0"
description = "SSV token market-quality monitoring (spread + depth) via CCXT Pro"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.4.0",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
ssv-mqm-collector = "ssv_mqm.main:run"
ssv-mqm-aggregator = "ssv_mqm.aggregator:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssv_mqm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
